--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Daniel Vargas</title>
-    <link rel="stylesheet" href="./estilo/estilo.css">
+    <link rel="stylesheet" href="./estilo.css">
 	<link rel="stylesheet" href="./fuentes/Montserrat-Light.ttf">
 	<link rel="stylesheet" href="./fuentes/Oswald-Bold.ttf">
 </head>
@@ -13,7 +13,7 @@
     <div class="contenedor">
         <header>
             <div class="logo">
-                <img src="./img/logo.png" alt="logo">
+                <img src="https://imgur.com/k5YrbVw" alt="logo">
             </div>
             <nav>
                 <ul>
