--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="contenedor">
         <header>
             <div class="logo">
-                <img src="https://imgur.com/k5YrbVw" alt="logo">
+                <img src="https://i.imgur.com/k5YrbVw.png" alt="logo">
             </div>
             <nav>
                 <ul>
