--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </nav>
         </header>
         <div class="slider">
-            <img src="https://i.imgur.com/PgrDNwW" alt="">
+            <img src="https://i.imgur.com/PgrDNwW.jpg" alt="">
 
         </div>
         <footer>
