--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Daniel Vargas - Sobre Mi</title>
-    <link rel="stylesheet" href="./estilo/estilo.css">
+    <link rel="stylesheet" href="./estilo.css">
 </head>
 
 <body>
     <div class="contenedor">
         <header>
             <div class="logo">
-                <img src="./img/logo.png" alt="logo">
+                <img src="https://i.imgur.com/3ZZUsJs.png" alt="logo">
             </div>
             <nav>
                 <ul>
@@ -39,7 +39,7 @@
 					</p>
                 </div>
                 <div class="der">
-                    <img src="./img/fotografo01.jpg" alt="">
+                    <img src="https://i.imgur.com/GyZ7HRF.jpg" alt="">
                 </div>
             </div>
 
