--- a/portafolio.html
+++ b/portafolio.html
@@ -30,37 +30,37 @@
             </div>
             <div class="contenedor-galeria">
                 <div class="img-efecto">
-                    <img src="./galeria/01.png" alt="">
+                    <img src="https://i.imgur.com/RtNLkUo.png" alt="">
                     <div class="descripcion">
                         <h2>Escalada en Suesca</h2>
                     </div>
                 </div>
                 <div class="img-efecto">
-                    <img src="./galeria/02.png" alt="">
+                    <img src="https://i.imgur.com/UfokIPl.png" alt="">
                     <div class="descripcion">
                         <h2>Escalada en Zipaquirá</h2>
                     </div>
                 </div>
                 <div class="img-efecto">
-                    <img src="./galeria/03.png" alt="">
+                    <img src="https://i.imgur.com/30r915i.png" alt="">
                     <div class="descripcion">
                         <h2>Escalada en Refugio de la Roca</h2>
                     </div>
                 </div>
                 <div class="img-efecto">
-                    <img src="./galeria/04.png" alt="">
+                    <img src="https://i.imgur.com/5rcbxpP.png" alt="">
                     <div class="descripcion">
                         <h2>Escalada en la Mojarra</h2>
                     </div>
                 </div>
                 <div class="img-efecto">
-                    <img src="./galeria/05.png" alt="">
+                    <img src="https://i.imgur.com/McgpMi7.png" alt="">
                     <div class="descripcion">
                         <h2>Escalada en Macheta</h2>
                     </div>
                 </div>
                 <div class="img-efecto">
-                    <img src="./galeria/06.png" alt="">
+                    <img src="https://i.imgur.com/4dnBftv.png" alt="">
                     <div class="descripcion">
                         <h2>Escalada en Florian</h2>
                     </div>
