--- a/contacto.html
+++ b/contacto.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Daniel Vargas - Contacto</title>
-    <link rel="stylesheet" href="./estilo/estilo.css">
+    <link rel="stylesheet" href="./estilo.css">
 </head>
 
 <body>
     <div class="contenedor">
         <header>
             <div class="logo">
-                <img src="./img/logo.png" alt="logo">
+                <img src="https://i.imgur.com/3ZZUsJs.png" alt="logo">
             </div>
             <nav>
                 <ul>
