--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./estilo.css">
 	<link rel="stylesheet" href="./fuentes/Montserrat-Light.ttf">
 	<link rel="stylesheet" href="./fuentes/Oswald-Bold.ttf">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/brands.css" integrity="sha384-i2PyM6FMpVnxjRPi0KW/xIS7hkeSznkllv+Hx/MtYDaHA5VcF0yL3KVlvzp8bWjQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/fontawesome.css" integrity="sha384-sri+NftO+0hcisDKgr287Y/1LVnInHJ1l+XC7+FOabmTTIK0HnE2ID+xxvJ21c5J" crossorigin="anonymous">	
 </head>
 <body>
     <div class="contenedor">
@@ -39,6 +41,7 @@
 				<div class="instagram"> 
 					<a href="#"></a>
 				</div>
+		    <i class="fab fa-facebook"></i>
             </div>
         </footer>
     </div>
