--- a/portafolio.html
+++ b/portafolio.html
@@ -72,15 +72,14 @@
         </div>
         <footer>
             <div class="social">
-				<div class="facebook"> 
-					<a href="#"></a>
-				</div>
-				<div class="youtube"> 
-					<a href="#"></a>
-				</div>
-				<div class="instagram"> 
-					<a href="#"></a>
-				</div>
+
+					<a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+
+
+					<a href="#"><i class="fab fa-youtube fa-2x"></i></a>
+
+
+					<a href="#"><i class="fab fa-instagram fa-2x"></i></a>
             </div>
         </footer>
     </div>
